--- a/html-css/portfolio/style.css
+++ b/html-css/portfolio/style.css
@@ -1,65 +1,48 @@
-
-.header{
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    background-color: #32a862;
-    height: 200px;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #32a862;
+  height: 200px;
 }
 
-.headList{
-margin-top: 40px;
+.headList {
+  display: flex;
 }
 
-.title{
-    margin-left: 10px;
-    color: white;
-    margin-top: 40px;
-    
+.routes {
+  list-style-type: none;
+  float: left;
+}
+.title {
+  color: white;
 }
 
-.routes{
-    list-style-type: none;
-    overflow: hidden;
+.routes a {
+  padding: 16px;
+  color: white;
+  text-decoration: none;
+  float: right;
+  font-size: 20px;
+}
+.routes a:hover {
+  font-weight: bold;
 }
 
-.routes{
-float: left;
-
-}
-
-.routes a{
-    display: block;
-    text-align:right;
-    padding: 16px;
-    color: white;
-    text-decoration: none;
-    float: right;
-    font-size:18px;
-    
-}
-
-.routes a:hover{
-    font-size: 22px;
-}
 /* -------------- body css ----------------- */
 
-.progress{
- 
-    height: 40px;
+.progress {
+  height: 40px;
 }
 .skills {
-    display:grid;
-    align-items: center;
-    grid-template-columns: 0.5fr 1fr;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 0.5fr 1fr;
 }
 
-.intro{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 10px;
-    
+.intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
 }
-
-
